--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,15 +1,27 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#solutionChecker {
+  margin: 10px;
+  border-radius: 5px;
+  background-color: aliceblue;
+}
+#solutionChecker:hover {
+  background-color: rgb(219, 226, 233);
+}
+#solutionChecker:active {
+  background-color: rgb(210, 217, 224);
 }
 #puzzle {
   display: grid;
   grid-template-columns: repeat(9, 0fr);
-  /* grid-gap: 10px; */
+  border: 3px solid black;
+  width: fit-content;
 }
 .puzzleCell {
   border: 1px solid black;
@@ -18,10 +30,14 @@ a.navbar-brand {
   width: 50px;
   height: 50px;
 }
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+div.puzzleCell {
+  color: grey;
+}
+.verticalDivider {
+  border-right: 3px solid black;
+}
+.horizontalDivider {
+  border-bottom: 3px solid black;
 }
 
 .btn-primary {
